# cmu-24780-proj

./: .gitignore  CMakeLists.txt  placeholder.cpp
demo/: CMakeLists.txt  demo.cpp
human/: CMakeLists.txt  Human.cpp  Human.h  RenderContext.h  test.cpp
